--- a/Vacation_Intinerary/Vacation_Itinerary.ipynb
+++ b/Vacation_Intinerary/Vacation_Itinerary.ipynb
@@ -27,31 +27,125 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1. Read the WeatherPy_vacation.csv into a DataFrame.\n",
-    "# vacation_df = pd.read_csv(\"Vacation_Search/WeatherPy_vacation.csv\")\n",
-    "# vacation_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Rikitea</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>73.22</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>-23.1203</td>\n",
+       "      <td>-134.9692</td>\n",
+       "      <td>People ThankYou</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Mahebourg</td>\n",
+       "      <td>MU</td>\n",
+       "      <td>73.69</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "      <td>-20.4081</td>\n",
+       "      <td>57.7000</td>\n",
+       "      <td>Shandrani Beachcomber Resort &amp; Spa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>Vaini</td>\n",
+       "      <td>TO</td>\n",
+       "      <td>71.76</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "      <td>-21.2000</td>\n",
+       "      <td>-175.2000</td>\n",
+       "      <td>Keleti Beach Resort</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>9</td>\n",
+       "      <td>Karaton</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>74.80</td>\n",
+       "      <td>scattered clouds</td>\n",
+       "      <td>-6.3424</td>\n",
+       "      <td>106.1045</td>\n",
+       "      <td>Parkir Mobil Wisata CAS Water Park</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>12</td>\n",
+       "      <td>Atuona</td>\n",
+       "      <td>PF</td>\n",
+       "      <td>77.00</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>-9.8000</td>\n",
+       "      <td>-139.0333</td>\n",
+       "      <td>Hôtel Hiva Oa Hanakee Lodge</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   City_ID       City Country  Max Temp       Description      Lat       Lng  \\\n",
+       "0        3    Rikitea      PF     73.22         clear sky -23.1203 -134.9692   \n",
+       "1        6  Mahebourg      MU     73.69  scattered clouds -20.4081   57.7000   \n",
+       "2        8      Vaini      TO     71.76  scattered clouds -21.2000 -175.2000   \n",
+       "3        9    Karaton      ID     74.80  scattered clouds  -6.3424  106.1045   \n",
+       "4       12     Atuona      PF     77.00         clear sky  -9.8000 -139.0333   \n",
+       "\n",
+       "                           Hotel Name  \n",
+       "0                     People ThankYou  \n",
+       "1  Shandrani Beachcomber Resort & Spa  \n",
+       "2                 Keleti Beach Resort  \n",
+       "3  Parkir Mobil Wisata CAS Water Park  \n",
+       "4         Hôtel Hiva Oa Hanakee Lodge  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 2. Using the template add the city name, the country code, the weather description and maximum temperature for the city.\n",
-    "info_box_template = \"\"\"\n",
-    "\n",
-    "\"\"\"\n",
-    "\n",
-    "# 3a. Get the data from each row and add it to the formatting template and store the data in a list.\n",
-    "hotel_info = [info_box_template.format(**row) for index, row in clean_hotel_df.iterrows()]\n",
-    "\n",
-    "# 3b. Get the latitude and longitude from each row and store in a new DataFrame.\n",
-    "locations = clean_hotel_df[[\"Lat\", \"Lng\"]]"
+    "# 1. Read the WeatherPy_vacation.csv into a DataFrame.\n",
+    "vacation_df = pd.read_csv(\"../Vacation_Search/WeatherPy_vacation.csv\")\n",
+    "vacation_df.head()"
    ]
   },
   {
@@ -60,77 +154,280 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4a. Add a marker layer for each city to the map.\n",
+    "# 2. Using the template add the city name, the country code, the weather description and maximum temperature for the city.\n",
+    "info_box_template = \"\"\"\n",
+    "<dl>\n",
+    "<dt>City</dt><dd>{City}</dd>\n",
+    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "<dt>Current Weather</dt><dd>{Description} and {Max Temp}°F</dd>\n",
+    "</dl>\n",
+    "\"\"\"\n",
     "\n",
-    "# 4b. Display the figure\n",
-    "\n"
+    "# 3a. Get the data from each row and add it to the formatting template and store the data in a list.\n",
+    "hotel_info = [info_box_template.format(**row) for index, row in vacation_df.iterrows()]\n",
+    "\n",
+    "# 3b. Get the latitude and longitude from each row and store in a new DataFrame.\n",
+    "locations = vacation_df[[\"Lat\", \"Lng\"]]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "797df6b840e7452bba00a1fcd426072c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# 4a. Add a marker layer for each city to the map.\n",
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "fig.add_layer(marker_layer)\n",
+    "# 4b. Display the figure\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     City_ID   City Country  Max Temp Description      Lat      Lng  \\\n",
+      "252      489  Olean      US     72.18   clear sky  42.0776 -78.4297   \n",
+      "\n",
+      "                           Hotel Name  \n",
+      "252  Best Western Plus University Inn        City_ID   City Country  Max Temp Description      Lat      Lng  \\\n",
+      "252      489  Olean      US     72.18   clear sky  42.0776 -78.4297   \n",
+      "\n",
+      "                           Hotel Name  \n",
+      "252  Best Western Plus University Inn       City_ID    City Country  Max Temp Description      Lat     Lng  \\\n",
+      "66      133  Bethel      US     76.87   clear sky  41.3712 -73.414   \n",
+      "\n",
+      "                       Hotel Name  \n",
+      "66  Courtyard by Marriott Danbury        City_ID    City Country  Max Temp    Description      Lat      Lng  \\\n",
+      "320      614  Newark      US      82.2  broken clouds  40.7357 -74.1724   \n",
+      "\n",
+      "                                    Hotel Name  \n",
+      "320  Robert Treat Hotel, BW Premier Collection       City_ID  City Country  Max Temp      Description      Lat      Lng  \\\n",
+      "92      178  Mayo      US     72.39  overcast clouds  38.8876 -76.5119   \n",
+      "\n",
+      "                              Hotel Name  \n",
+      "92  Resorts Resource Group International  \n"
+     ]
+    }
+   ],
    "source": [
     "# From the map above pick 4 cities and create a vacation itinerary route to travel between the four cities. \n",
     "# 5. Create DataFrames for each city by filtering the 'vacation_df' using the loc method. \n",
     "# Hint: The starting and ending city should be the same city.\n",
     "\n",
-    "vacation_start = vacation_df.loc[]\n",
-    "vacation_end = vacation_df.loc[]\n",
-    "vacation_stop1 = vacation_df.loc[]\n",
-    "vacation_stop2 = vacation_df.loc[] \n",
-    "vacation_stop3 = vacation_df.loc[] "
+    "#print(vacation_df[vacation_df['City']==\"Olean\"])\n",
+    "\n",
+    "vacation_start = vacation_df.loc[vacation_df['City']==\"Olean\"]\n",
+    "vacation_end = vacation_df.loc[vacation_df['City']==\"Olean\"]\n",
+    "vacation_stop1 = vacation_df.loc[vacation_df['City']==\"Bethel\"]\n",
+    "vacation_stop2 = vacation_df.loc[vacation_df['City']==\"Newark\"]\n",
+    "vacation_stop3 = vacation_df.loc[vacation_df['City']==\"Mayo\"]\n",
+    "print(vacation_start, vacation_end,vacation_stop1,vacation_stop2,vacation_stop3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(42.0776, -78.4297) (42.0776, -78.4297) (41.3712, -73.414) (40.7357, -74.1724) (38.8876, -76.5119)\n"
+     ]
+    }
+   ],
    "source": [
     "# 6. Get the latitude-longitude pairs as tuples from each city DataFrame using the to_numpy function and list indexing.\n",
-    "start = \n",
-    "end = \n",
-    "stop1 = \n",
-    "stop2 = \n",
-    "stop3 = "
+    "start = (vacation_start.to_numpy()[0][5], vacation_start.to_numpy()[0][6])\n",
+    "end = (vacation_end.to_numpy()[0][5], vacation_end.to_numpy()[0][6])\n",
+    "stop1 = (vacation_stop1.to_numpy()[0][5], vacation_stop1.to_numpy()[0][6])\n",
+    "stop2 = (vacation_stop2.to_numpy()[0][5], vacation_stop2.to_numpy()[0][6])\n",
+    "stop3 = (vacation_stop3.to_numpy()[0][5], vacation_stop3.to_numpy()[0][6])\n",
+    "print(start, end, stop1,stop2,stop3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 36,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "21b57ce14b954ae2945916cb00a7c55f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 7. Create a direction layer map using the start and end latitude-longitude pairs,\n",
     "# and stop1, stop2, and stop3 as the waypoints. The travel_mode should be \"DRIVING\", \"BICYCLING\", or \"WALKING\".\n",
-    "\n"
+    "import gmaps.datasets\n",
+    "\n",
+    "fig2 = gmaps.figure()\n",
+    "roundtrip = gmaps.directions_layer(start,end, waypoints=[stop1,stop2,stop3], travel_mode='DRIVING')\n",
+    "fig2.add_layer(roundtrip)\n",
+    "fig2\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>City_ID</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Max Temp</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Lng</th>\n",
+       "      <th>Hotel Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>489</td>\n",
+       "      <td>Olean</td>\n",
+       "      <td>US</td>\n",
+       "      <td>72.18</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>42.0776</td>\n",
+       "      <td>-78.4297</td>\n",
+       "      <td>Best Western Plus University Inn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>133</td>\n",
+       "      <td>Bethel</td>\n",
+       "      <td>US</td>\n",
+       "      <td>76.87</td>\n",
+       "      <td>clear sky</td>\n",
+       "      <td>41.3712</td>\n",
+       "      <td>-73.4140</td>\n",
+       "      <td>Courtyard by Marriott Danbury</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>614</td>\n",
+       "      <td>Newark</td>\n",
+       "      <td>US</td>\n",
+       "      <td>82.20</td>\n",
+       "      <td>broken clouds</td>\n",
+       "      <td>40.7357</td>\n",
+       "      <td>-74.1724</td>\n",
+       "      <td>Robert Treat Hotel, BW Premier Collection</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>178</td>\n",
+       "      <td>Mayo</td>\n",
+       "      <td>US</td>\n",
+       "      <td>72.39</td>\n",
+       "      <td>overcast clouds</td>\n",
+       "      <td>38.8876</td>\n",
+       "      <td>-76.5119</td>\n",
+       "      <td>Resorts Resource Group International</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   City_ID    City Country  Max Temp      Description      Lat      Lng  \\\n",
+       "0      489   Olean      US     72.18        clear sky  42.0776 -78.4297   \n",
+       "1      133  Bethel      US     76.87        clear sky  41.3712 -73.4140   \n",
+       "2      614  Newark      US     82.20    broken clouds  40.7357 -74.1724   \n",
+       "3      178    Mayo      US     72.39  overcast clouds  38.8876 -76.5119   \n",
+       "\n",
+       "                                  Hotel Name  \n",
+       "0           Best Western Plus University Inn  \n",
+       "1              Courtyard by Marriott Danbury  \n",
+       "2  Robert Treat Hotel, BW Premier Collection  \n",
+       "3       Resorts Resource Group International  "
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 8. To create a marker layer map between the four cities.\n",
     "#  Combine the four city DataFrames into one DataFrame using the concat() function.\n",
-    "itinerary_df = pd.concat([],ignore_index=True)\n",
+    "itinerary_df = pd.concat([vacation_start,vacation_stop1,vacation_stop2,vacation_stop3],ignore_index=True)\n",
     "itinerary_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 9 Using the template add city name, the country code, the weather description and maximum temperature for the city. \n",
     "info_box_template = \"\"\"\n",
-    "\n",
+    "<dl>\n",
+    "<dt><b>Hotel Name</b></dt><dt>{Hotel Name}</dt>\n",
+    "<dt><b>City</b></dt><dt>{City}</dt>\n",
+    "<dt><b>Country</b></dt><dt>{Country}</dt>\n",
+    "<dt><b>Current Weather</b></dt><dt>{Description} and {Max Temp}°F</dt>\n",
+    "</dl>\n",
     "\"\"\"\n",
     "\n",
     "# 10a Get the data from each row and add it to the formatting template and store the data in a list.\n",
@@ -142,13 +439,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c90e44f2a9c34df69a5fcdee848a0228",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Figure(layout=FigureLayout(height='420px'))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# 11a. Add a marker layer for each city to the map.\n",
-    "\n",
-    "# 11b. Display the figure\n"
+    "fig3 = gmaps.figure(center=(30.0, 31.0), zoom_level=3)\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "fig3.add_layer(marker_layer)\n",
+    "# 11b. Display the figure\n",
+    "fig3"
    ]
   },
   {
@@ -156,7 +471,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "fig = gmaps.figure(center=(30.0, 31.0), zoom_level=1.5)\n",
+    "marker_layer = gmaps.marker_layer(locations, info_box_content=hotel_info)\n",
+    "fig.add_layer(marker_layer)\n",
+    "# 4b. Display the figure\n",
+    "fig"
+   ]
   }
  ],
  "metadata": {
